chore: Add pytest to debug requirements for testing

--- a/requirements-debug.txt
+++ b/requirements-debug.txt
@@ -4,5 +4,9 @@
 pywin32>=305
 asyncio>=3.4.3
 
+# Testing
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+
 # Optional but recommended
 colorama>=0.4.6  # For colored console output
